--- a/requirements.txt
+++ b/requirements.txt
@@ -1,165 +1,12 @@
-alembic==1.7.7
-altgraph==0.17.2
-amqp==5.1.1
-appdirs==1.4.4
-asgiref==3.5.2
-attrs==21.4.0
-autopage==0.5.0
-bcrypt==3.2.2
-beautifulsoup4==4.11.1
-bidict==0.22.0
-bs4==0.0.1
-cachetools==5.1.0
-certifi==2022.5.18
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.1.3
-cliff==3.10.1
-clr-loader==0.1.7
-cmd2==2.4.1
-colorama==0.4.4
-comtypes==1.1.11
-cryptography==37.0.2
-debtcollector==2.5.0
-decorator==5.1.1
-Django==4.1
-dnspython==2.2.1
-dogpile.cache==1.1.5
-eventlet==0.33.1
-extras==1.0.0
-fasteners==0.17.3
-fixtures==4.0.0
 Flask==2.1.2
 Flask-SocketIO==5.1.2
-Flask-SQLAlchemy==2.5.1
-future==0.18.2
-futurist==2.4.1
-greenlet==1.1.2
-httplib2==0.20.4
-idna==3.3
-iso8601==1.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jmespath==1.0.0
-jsonpatch==1.32
-jsonpointer==2.3
-jsonschema==4.5.1
-keyboard==0.13.5
-keystoneauth1==4.5.0
-keystonemiddleware==9.4.0
-kombu==5.2.4
-logutils==0.3.5
-lxml==4.8.0
-Mako==1.2.0
-MarkupSafe==2.1.1
-mido==1.2.10
-msgpack==1.0.3
-munch==2.5.0
-netaddr==0.8.0
-netifaces==0.11.0
-neutron-lib==2.21.0
-neutron-web==0.1.6
-numpy==1.23.0
-openstacksdk==0.61.0
-os-client-config==2.1.0
-os-ken==2.3.1
-os-resource-classes==1.1.0
-os-service-types==1.7.0
-os-traits==2.7.0
-os-vif==2.7.1
-osc-lib==2.5.0
-oslo.cache==2.11.0
-oslo.concurrency==4.5.1
-oslo.config==8.8.0
-oslo.context==4.1.0
-oslo.db==11.3.0
-oslo.i18n==5.1.0
-oslo.log==4.8.0
-oslo.messaging==12.14.0
-oslo.metrics==0.4.0
-oslo.middleware==4.5.1
-oslo.policy==3.12.1
-oslo.privsep==2.8.0
-oslo.reports==2.4.0
-oslo.rootwrap==6.3.1
-oslo.serialization==4.3.0
-oslo.service==2.8.0
-oslo.upgradecheck==1.5.0
-oslo.utils==4.13.0
-oslo.versionedobjects==2.6.0
-osprofiler==3.4.3
-ovs==2.17.1.post1
-ovsdbapp==1.16.0
-packaging==21.3
-Paste==3.5.0
-PasteDeploy==2.1.1
-pbr==5.9.0
-pecan==1.4.1
-pefile==2022.5.30
-Pillow==9.1.1
-prettytable==3.3.0
-prometheus-client==0.14.1
-proxy-tools==0.1.0
-psutil==5.9.0
 psycopg2==2.9.3
-pycadf==3.1.1
-pycparser==2.21
-pyenchant==3.2.2
-pygame==2.1.2
-pyinstaller==5.1
-pyinstaller-hooks-contrib==2022.7
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-pyperclip==1.8.2
-pypiwin32==223
-pyreadline3==3.4.1
-pyrsistent==0.18.1
-pystray==0.19.3
-python-dateutil==2.8.2
-python-designateclient==4.5.0
-python-engineio==4.3.2
-python-keystoneclient==4.4.0
-python-neutronclient==7.8.0
-python-novaclient==17.7.0
-python-rtmidi==1.4.9
-python-socketio==5.6.0
-pythonnet==3.0.0a2
-pyttsx3==2.90
-pytz==2022.1
-pywebview==3.6.3
-pywin32==304
-pywin32-ctypes==0.2.0
-PyYAML==6.0
-repoze.lru==0.7
-requests==2.27.1
-requestsexceptions==1.4.0
-rfc3986==2.0.0
-Routes==2.5.1
-setproctitle==1.2.3
-simplejson==3.17.6
-six==1.16.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.36
-sqlalchemy-migrate==0.13.0
-sqlparse==0.4.2
-statsd==3.3.0
-stevedore==3.5.0
-Tempita==0.5.2
-tenacity==8.0.1
-testresources==2.0.1
-testscenarios==0.5.0
-testtools==2.5.0
-tooz==2.11.1
-tzdata==2022.2
-urllib3==1.26.9
-vine==5.0.0
-voluptuous==0.13.1
-waitress==2.1.1
-wcwidth==0.2.5
-WebOb==1.8.7
-WebTest==3.0.0
-Werkzeug==2.1.2
-WMI==1.5.1
-wrapt==1.14.1
-yappi==1.3.3
+certifi==2021.5.30
+click==8.0.1
+future==0.18.2
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+Werkzeug==2.0.2
+wincertstore==0.2
