--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+Flask==2.1.2
+Flask-SocketIO==5.1.2
+psycopg2==2.9.3
 certifi==2021.5.30
 click==8.0.1
-Flask==2.0.2
 future==0.18.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
