--- a/scripts/namegame.service
+++ b/scripts/namegame.service
@@ -6,8 +6,8 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/src/namegame
-ExecStart=/home/ubuntu/src/namegame/scripts/c.sh
-ExecStop=tmux kill-session -t namegame
+ExecStart=/bin/bash /home/ubuntu/src/namegame/scripts/c.sh
+ExecStop=/bin/tmux kill-session -t namegame
 Restart=always
 RestartSec=1
 StartLimitIntervalSec=0
