--- a/scripts/namegame.service
+++ b/scripts/namegame.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/src/namegame
-ExecStart=/usr/bin/c.sh
+ExecStart=/usr/local/bin/c.sh
 ExecStop=/bin/tmux kill-session -t namegame
 Restart=always
 RestartSec=1
