--- a/scripts/namegame.service
+++ b/scripts/namegame.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=ubuntu
-WorkingDirectory=/home/ubuntu/src/namegame
+#WorkingDirectory=/home/ubuntu/src/namegame
 ExecStart=/usr/local/bin/c.sh
 ExecStop=/bin/tmux kill-session -t namegame
 Restart=always
