--- a/scripts/namegame.service
+++ b/scripts/namegame.service
@@ -6,8 +6,8 @@ After=network.target
 #ProtectHome=false
 Type=simple
 User=ubuntu
-#WorkingDirectory=/home/ubuntu/src/namegame
-ExecStart=/usr/local/bin/b.sh
+WorkingDirectory=/usr/local/bin
+ExecStart=/usr/bin/sudo /bin/bash /usr/local/bin/b.sh
 #ExecStop=/bin/tmux kill-session -t namegame
 Restart=always
 RestartSec=1
