--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,16 @@
-async-generator==1.10
-attrs==22.1.0
-bidict==0.22.0
-blinker==1.5
-certifi==2022.9.24
-cffi==1.15.1
-chromedriver-autoinstaller==0.4.0
-click==8.1.3
-colorama==0.4.5
-cryptography==37.0.4
-dnspython==2.2.1
-eventlet==0.33.1
-exceptiongroup==1.0.0rc9
-Flask==2.1.2
-Flask-Login==0.6.2
-Flask-Mail==0.9.1
-Flask-SocketIO==5.2.0
-Flask-SQLAlchemy==2.5.1
-gevent==22.10.1
 gevent-websocket==0.10.1
-greenlet==1.1.3.post0
+bidict==0.22.1
+blinker==1.6.2
+click==8.1.7
+colorama==0.4.6
+Flask==2.3.3
+Flask-SocketIO==5.3.6
 h11==0.14.0
-idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-mysql-connector-python==8.0.31
-outcome==1.2.0
-protobuf==3.20.1
-psycopg2==2.9.3
-pycparser==2.21
-pyOpenSSL==22.0.0
-PySocks==1.7.1
-python-engineio==4.3.2
-python-socketio==5.6.0
-selenium==4.5.0
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-SQLAlchemy==1.4.40
-trio==0.22.0
-trio-websocket==0.9.2
-urllib3==1.26.12
-Werkzeug==2.1.2
+MarkupSafe==2.1.3
+python-engineio==4.7.1
+python-socketio==5.9.0
+simple-websocket==0.10.1
+Werkzeug==2.3.7
 wsproto==1.2.0
-zope.event==4.5.0
-zope.interface==5.5.0
