added user change feature
added user change feature to handle the instance of iphones randomly losing cookies and defaulting to a new user, so they can reselect their old user.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ namegame.db
 test_results.txt
 scripts/__pycache__/web_scrape_test.cpython-310.pyc
 log.log
+log.log
+scripts/__pycache__/web_scrape_test.cpython-311.pyc
